k8s/staging/resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mulher-rio-staging
  namespace: mulher-rio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mulher-rio-staging
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mulher-rio-staging
    spec:
      containers:
        - name: mulher-rio
          image: gcr.io/project-id/mulher-rio
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 250m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mulher-rio-staging
  name: mulher-rio-staging
  namespace: mulher-rio
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    app: mulher-rio-staging

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mulher-rio-staging
  namespace: mulher-rio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - staging.mulher.rio
      secretName: mulher-rio-staging-tls
  rules:
    - host: staging.mulher.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mulher-rio-staging
                port:
                  number: 80
